[project]
name = "logger"
version = "0.0.1"
authors = [
  { name="Haotian Xie", email="hotinexie@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/elegant-infra/logger"
Issues = "https://github.com/elegant-infra/logger/issues"

[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"
